# managed-ctrie

./: .gitmodules  CMakeLists.txt  README.org  test-ctrie.cpp  test-otf-ctrie
include/: ctrie_type_tags.hpp  otf_ctrie.hpp  ref_string.hpp  test-ctrie.hpp
